--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ matplotlib==3.8.3
 tqdm==4.66.2
 pandas==2.2.1
 tensorflow==2.16.1
+path==16.10.0
+imbalanced-learn==0.12.2
+scikit-learn==1.4.1.post1
+seaborn==0.13.2
